# quartz

./: .gitignore  README.md  build.sh  docu.md
qcc/: .gitignore  2  CMakeLists.txt  Makefile  array.c  array.h  array.qz  astprint.c  astprint.h  brainfuck.qz  chunk.c  chunk.h  common.h  compiler.c  compiler.h  ctable.c  ctable.h  debug.c  debug.h  demo_str.qz  error.c  error.h  expr.c  expr.h  fnparams.c  fnparams.h  hash.h  hello  hello.qz  import.c  import.h  lexer.c  lexer.cc  lexer.h  memory.c  memory.h  mng.py  module.c  module.h  name.qz  (+35 more)
qcc/programs/: benchmark.qz  break_outside_loop_error.qz  cant_call_var_if_function_not_assigned.qz  closed_upvalue_returned_from_function.qz  count_to_ten_for.qz  declare_var_with_the_same_name_of_fn.qz  factorial_imperative.qz  factorial_recursive.qz  fibonacci_imperative.qz  fibonacci_recursive.qz  function_type_void_first_param.qz  function_type_void_last_param.qz  function_types.qz  function_types_errors.qz  functions_and_calls.qz  functions_share_upvalue.qz  ifelse.qz  many_vars.qz  multiple_break_inside_multiple_loop.qz  primos_bench.qz  return_fn_mismatch.qz  return_in_void_function.qz  return_value_void_function.qz  strange_sums.qz  type_errors.qz  types.qz  use_var_in_init.qz  using_reserved_words_as_identifiers.qz  var_overflow.qz  variables_cannot_be_void.qz
qcc/src/: CMakeLists.txt  astprint.h  expr.h  lexer.cc  lexer.h  parser.h  token.cc  token.h
qcc/stdlib/: qstdconv.c  qstdconv.h  qstdio.c  qstdio.h  qstdtime.c  qstdtime.h  stdlib.c  stdlib.h
qcc/test/: CMakeLists.txt  create_test.sh  lexer_test.cc  run.pl
(+203 files in other folders)
